--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link>https://netology.ru/profile/program/git-34/lessons/98043/lesson_items/486107
+        <link>https://netology.ru/profile/program/git-34/lessons/98043/lesson_items/486107 
     </link>
+    <link> Wkddsdak.</head>
     </head>
 </html>
