--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
     <head>
         <link>https://netology.ru/profile/program/git-34/lessons/98043/lesson_items/486107
     </link>
+    <datalist> Joke</datalist>
     </head>
 </html>
